--- a/src/pages/ProjectDetails.css
+++ b/src/pages/ProjectDetails.css
@@ -1,21 +1,14 @@
-.projects-root { 
-    margin-top: 70px;
+.details-root {
     width: 100%;
     display: flex;
-    background: #F9F9F9;
     justify-content: center;
 }
 
-.projects-container {
+.details-container {
     width: 70%;
     padding-top: 70px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-}
-
-.card-container {
-    margin-top: 100px;
-    width: 100%;
 }
