--- a/src/components/home/ProjectCard.css
+++ b/src/components/home/ProjectCard.css
@@ -3,6 +3,7 @@
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .card:hover {
@@ -21,7 +22,7 @@
 .summary-container {
     display: flex;
     flex-direction: column;
-    padding: 5px 20px 20px 30px;
+    padding: 0px 20px 20px 30px;
     width: 62%;
 }
 
